# FastAPI2

./: .env  README.md  main.py  pyproject.toml  test.db
src/: app.py  db.py  schemas.py  users.py
