[project]
name = "fastapi2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.123.0",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "imagekitio>=4.2.0",
    "python-env>=1.0.0",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
